Bug #1827747 Contrast on warning messages
Contrast on warning messages is not high enough due to bootstrap
default calculations, added overrides that are same as statuses.
Links in warning messages are also changed to bold.

behatnotneeded

(cherry picked from commit 9d3620f3cec87d36426627de2849169bf50b3888)

--- a/htdocs/theme/raw/sass/form/_alert.scss
+++ b/htdocs/theme/raw/sass/form/_alert.scss
@@ -35,6 +35,9 @@
             }
         }
     }
+    a {
+        font-weight: bold;
+    }
 }
 
 .alert-default {
@@ -43,6 +46,27 @@
     color: $gray-500;
 }
 
+// overrides bootstrap calculations so this is same as states
+.alert-success {
+    color: scale-color($success, $lightness: -30%);
+    background-color: scale-color($success, $lightness: 70%);
+    border-color: scale-color($success, $lightness: 50%);
+}
+.alert-info {
+    color: scale-color($info, $lightness: -30%);
+    background-color: scale-color($info, $lightness: 70%);
+    border-color: scale-color($info, $lightness: 50%);
+}
+.alert-warning {
+    color: scale-color($warning, $lightness: -40%);
+    background-color: scale-color($warning, $lightness: 85%);
+    border-color: scale-color($warning, $lightness: 50%);
+}
+.alert-danger {
+    color: scale-color($danger, $lightness: -30%);
+    background-color: scale-color($danger, $lightness: 70%);
+    border-color: scale-color($danger, $lightness: 50%);
+}
 .alert-submitted {
     background-color: $state-submitted-bg;
     border: 1px solid $state-submitted-border;
